api-gateway.yaml/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bonsaiIngress
  labels:
    name: bonsaiIngress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/auth"
        backend:
          service:
            name: auth-service
            port: 
              number: 3000
      - pathType: Prefix
        path: "/user"
        backend:
          service:
            name: user-service
            port: 
              number: 3010
      - pathType: Prefix
        path: "/link"
        backend:
          service:
            name: link-service
            port: 
              number: 3020
